--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8'
 
 services:
   frontend:
+      image: ecr-g1mg04-frontend
       build:
         context: ./Frontend     
         dockerfile: Dockerfile
-      container_name: frontend-service
+      container_name: ecr-g1mg04-frontend
       ports:
         - "8080:8080"
       environment:
@@ -16,6 +17,7 @@ services:
         - /app/node_modules 
       networks:
         - app-network
+
 
 networks:
   app-network:
