--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,45 +2,48 @@ version: '3.8'
 
 services:
   backend:
-      image: ecr-g1mg04-backend
-      build: 
-        context: ./backend
-        dockerfile: Dockerfile
-      container_name: ecr-g1mg04-backend
-      ports:
-        - "8000:8000"
-      volumes:
-        - ./backend:/app
-      command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-      networks:
-        - app-network
-
-      healthcheck:
+    image: ecr-g1mg04-backend:latest
+    build:
+      context: .
+      dockerfile: Backend/Dockerfile
+    container_name: fastapi
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./Backend:/app/Backend
+    environment:
+      - PYTHONUNBUFFERED=1
+      - PYTHONPATH=/app
+    command: uvicorn Backend.app.main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - app-network
+    healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
+      interval: 10s
+      timeout: 5s
       retries: 3
-      start_period: 10s
-
+      start_period: 5s
 
   frontend:
-      image: ecr-g1mg04-frontend
-      build:
-        context: ./Frontend     
-        dockerfile: Dockerfile
-      container_name: ecr-g1mg04-frontend
-      ports:
-        - "8080:8080"
-      environment:
-        - VITE_API_URL=/api
-        - CHOKIDAR_USEPOLLING=true
-      volumes:
-        - ./Frontend:/app
-        - /app/node_modules 
-      networks:
-        - app-network
-  
+    image: ecr-g1mg04-frontend
+    build:
+      context: ./Frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "8080:8080"
+    environment:
+      - VITE_API_URL=http://localhost:8000
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./Frontend:/app
+      - /app/node_modules
+    networks:
+      - app-network
+    depends_on:
+      backend:
+        condition: service_healthy
 
 networks:
   app-network:
-    driver: bridge 
+    driver: bridge
