--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -53,3 +53,8 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Backend/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Update ECS Service
+        if: ${{ steps.filter.outputs.backend == 'true' || github.event_name == 'workflow_run' }}
+        run: |
+          aws ecs update-service --cluster ton-nom-de-cluster --service ton-nom-de-service --force-new-deployment
