--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'Backend/**'
       - 'Frontend/**'
-  # Déclenchement automatique après le succès du training
+  # --- AJOUT : Déclenchement automatique après le training ---
   workflow_run:
     workflows: ["Model Training Pipeline (CT)"]
     types: [completed]
@@ -15,6 +15,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    # On ne lance le job que si c'est un push OU si le training a réussi
     if: ${{ github.event_name == 'push' || github.event.workflow_run.conclusion == 'success' }}
     
     steps:
@@ -42,7 +43,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # --- SECTION BACKEND ---
+      # --- BACKEND : On build si le code a changé OU si le training vient de finir ---
       - name: Build and Push Backend
         if: ${{ steps.filter.outputs.backend == 'true' || github.event_name == 'workflow_run' }}
         env:
@@ -53,16 +54,9 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Backend/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Deploy Backend to App Runner
-        if: ${{ steps.filter.outputs.backend == 'true' || github.event_name == 'workflow_run' }}
-        run: |
-          # On récupère l'ARN via le nom du service
-          SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='service-backend-g1-mg04'].ServiceArn" --output text)
-          aws apprunner start-deployment --service-arn $SERVICE_ARN
-
-      # --- SECTION FRONTEND ---
+      # --- FRONTEND : Ne tourne que si le dossier Frontend a changé ---
       - name: Build and Push Frontend
-        if: ${{ steps.filter.outputs.frontend == 'true' }}
+        if: steps.filter.outputs.frontend == 'true'
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_FRONTEND_REPO }}
@@ -70,9 +64,3 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Frontend/Dockerfile ./Frontend
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-      - name: Deploy Frontend to App Runner
-        if: ${{ steps.filter.outputs.frontend == 'true' }}
-        run: |
-          SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='service-frontend-g1-mg04'].ServiceArn" --output text)
-          aws apprunner start-deployment --service-arn $SERVICE_ARN
