--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - 'Backend/**'
       - 'Frontend/**'
-  # --- AJOUT : Déclenchement automatique après le training ---
   workflow_run:
     workflows: ["Model Training Pipeline (CT)"]
     types: [completed]
@@ -15,7 +14,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    # On ne lance le job que si c'est un push OU si le training a réussi
     if: ${{ github.event_name == 'push' || github.event.workflow_run.conclusion == 'success' }}
     
     steps:
@@ -39,11 +37,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # --- ÉTAPE AJOUTÉE : Télécharger le modèle depuis S3 ---
+      - name: Download Model from S3
+        if: ${{ steps.filter.outputs.backend == 'true' || github.event_name == 'workflow_run' }}
+        run: |
+          mkdir -p Backend/app/model
+          aws s3 cp s3://${{ secrets.S3_BUCKET_NAME }}/models/best_model.joblib Backend/app/model/best_model.joblib
+          echo "✅ Modèle récupéré de S3 et placé dans Backend/app/model/"
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # --- BACKEND : On build si le code a changé OU si le training vient de finir ---
+      # --- BACKEND : Le build inclura maintenant le modèle téléchargé ---
       - name: Build and Push Backend
         if: ${{ steps.filter.outputs.backend == 'true' || github.event_name == 'workflow_run' }}
         env:
@@ -54,7 +60,7 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Backend/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # --- FRONTEND : Ne tourne que si le dossier Frontend a changé ---
+      # --- FRONTEND ---
       - name: Build and Push Frontend
         if: steps.filter.outputs.frontend == 'true'
         env:
